--- a/pom.xml
+++ b/pom.xml
@@ -100,22 +100,21 @@
                 </configuration>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
+                <version>2.1</version>
+                <configuration>
+                    <actTransitively>false</actTransitively>
+                    <transitive>false</transitive>
+                </configuration>
             </plugin>
             <plugin>
-                <groupId>org.sonatype.plugins</groupId>
-                <artifactId>nexus-staging-maven-plugin</artifactId>
-                <version>1.6.7</version>
-                <extensions>true</extensions>
-                <configuration>
-                    <serverId>ossrh</serverId>
-                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
-                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
-                </configuration>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>2.4</version>
             </plugin>
         </plugins>
     </build>
-
 
     <scm>
         <connection>scm:git:git@github.com:SeanDragon/protools.git</connection>
@@ -125,15 +124,14 @@
     </scm>
 
     <distributionManagement>
-        <snapshotRepository>
-            <id>ossrh</id>
-            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-        </snapshotRepository>
         <repository>
-            <id>ossrh</id>
-            <name>Maven Central Staging Repository</name>
-            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+            <id>public-snapshots</id>
+            <url>http://repo.thunisoft.com/maven2/content/repositories/releases/</url>
         </repository>
+        <snapshotRepository>
+            <id>public-repo</id>
+            <url>http://repo.thunisoft.com/maven2/content/repositories//snapshots</url>
+        </snapshotRepository>
     </distributionManagement>
 
 </project>
